# krita

krita/plugins/extensions/dockers/defaultdockers/: kis_node_juggler_compressed.h
krita/plugins/formats/brush/: CMakeLists.txt  kis_brush_export.cpp  krita_brush_export.json  krita_brush_import.json
krita/ui/: CMakeLists.txt  KisApplication.cpp
libs/flake/: Mainpage.dox
libs/impex/: CMakeLists.txt  ImpexDebug.cpp  ImpexDebug.h  KisExportFilter.cpp  KisExportFilter.h  KisExportFilterRegistry.cpp  KisExportFilterRegistry.h  KisImpExBase.cpp  KisImpExBase.h  KisImportFilter.cpp  KisImportFilter.h  KisImportFilterRegistry.cpp  KisImportFilterRegistry.h  Mainpage.dox
libs/odf/: Mainpage.dox
libs/pigment/: Mainpage.dox
libs/vectorimage/: Mainpage.dox
libs/widgets/: Mainpage.dox
libs/widgetutils/: Mainpage.dox
plugins/: CMakeLists.txt
plugins/flake/textshape/kotext/: Mainpage.dox
plugins/impex/: CMakeLists.txt
plugins/impex/png/: CMakeLists.txt  krita_png_export.json  krita_png_import.json
